<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2026. Sir Wellington.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>tech.sirwellington.alchemy</groupId>
        <artifactId>alchemy</artifactId>
        <version>3.0-SNAPSHOT</version>
    </parent>

    <artifactId>alchemy-http</artifactId>
    <version>3.5-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>${project.artifactId}</name>

    <url>https://github.com/SirWellington/alchemy-http</url>
    <description>
        Part of the Alchemy Collection.
        REST without the MESS.
        Makes it dead-easy to call RESTful Web Services in Java.
        It is designed for interactions with APIs written in REST and JSON.
    </description>

    <scm>
        <connection>scm:git:git@github.com:SirWellington/alchemy-http.git</connection>
        <developerConnection>scm:git:git@github.com:SirWellington/alchemy-http.git</developerConnection>
        <url>git@github.com:SirWellington/alchemy-http.git</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/SirWellington/alchemy-http/issues</url>
    </issueManagement>

    <inceptionYear>2015</inceptionYear>

    <prerequisites>
        <maven>3.0.3</maven>
    </prerequisites>

    <properties>
        <!--Java Compiler Properties-->
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>


    <dependencies>

        <!--=======================-->
        <!--UNIT TESTING-->
        <!--=======================-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>alchemy-test</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>


        <!--=======================-->
        <!--ALCHEMY-->
        <!--=======================-->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>alchemy-annotations</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>alchemy-arguments</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>alchemy-collections</artifactId>
            <version>2.1</version>
        </dependency>

        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>alchemy-generator</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>


        <!--=======================-->
        <!--LOGGING-->
        <!--=======================-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>


        <!--=======================-->
        <!--GSON-->
        <!--=======================-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>


        <!--=======================-->
        <!--URL BUILDER-->
        <!--=======================-->
        <dependency>
            <groupId>io.mikael</groupId>
            <artifactId>urlbuilder</artifactId>
            <version>2.0.9</version>
        </dependency>

    </dependencies>

</project>
